--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -111,6 +111,6 @@
     <!-- AdminLTE for demo purposes -->
     <!-- <script src="%PUBLIC_URL%/dist/js/demo.js"></script> -->
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="%PUBLIC_URL%/dist/js/pages/dashboard2.js"></script>
+    <!-- <script src="%PUBLIC_URL%/dist/js/pages/dashboard2.js"></script> -->
   </body>
 </html>
